--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "manage.py",
+        "src": "eLMS-SWE/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "50mb" }
+        "config": { "maxLambdaSize": "50mb" , "runtime":"python3.9"}
       }
     ],
     "routes": [
      
       {
-        "src": "/(.*)",
-        "dest": "manage.py"
+        "src": "/eLMS-SWE(.*)",
+        "dest": "eLMS-SWE/wsgi.py"
       }
     ]}
