--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "eLMS-SWE/wsgi.py",
+        "src": "eLMS-SWE/manage.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "50mb" , "runtime":"python3.9"}
       }
