--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,27 @@
 {
-  "version": 2,
-  "builds": [{
+"version": 2,
+"builds": [
+  {
     "src": "eLMS/wsgi.py",
     "use": "@vercel/python",
-    "config": { "maxLambdaSize": "50mb" }
-  }],
-  "routes": [{
-      "src": "/static/(.*)",
-      "headers": { "cache-control": "s-maxage=31536000, immutable" },
-      "dest": "/eLMS/static/$1"
-    },
-    {
-      "src": "/media/(.*)",
-      "headers": { "cache-control": "s-maxage=31536000, immutable" },
-      "dest": "/eLMS/media/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/eLMS/wsgi.py"
-    }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "eLMS.settings",
-    "DATABASE_URL": "@database_url"
+    "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
   },
-  "build": {
-    "env": {
-      "PROJECT_NAME": "eLMS"
+  {
+    "src": "build_files.sh",
+    "use": "@vercel/static-build",
+    "config": {
+      "distDir": "staticfiles_build"
     }
   }
+],
+"routes": [
+  {
+    "src": "/static/(.*)",
+    "dest": "/static/$1"
+  },
+  {
+    "src": "/(.*)",
+    "dest": "eLMS/wsgi.py"
+  }
+]
 }
